[package]
name = "leptos_thaw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7.5", optional = true }
console_error_panic_hook = "0.1"
leptos = { version = "0.7.0-beta2" }
leptos_axum = { version = "0.7.0-beta2", optional = true }
leptos_meta = { version = "0.7.0-beta2" }
leptos_router = { version = "0.7.0-beta2" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5.0", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.93"
thiserror = "1"
tracing = { version = "0.1", optional = true }
http = "1"
console_log = "1"
log = "0.4"
icondata = "0.4"
palette = "0.7"
chrono = "0.4"
cfg-if = "1"
send_wrapper = "0.6"
js-sys = "0.3"
thaw = "0.4.0-beta"
# demo = { path = "../../demo", default-features = false }

[features]
tracing = ["leptos/tracing"]
hydrate = ["leptos/hydrate", "thaw/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
  "thaw/ssr",
]
nightly = ["leptos/nightly", "leptos_router/nightly", "thaw/nightly"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "ssr_axum"
site-root = "target/site"
site-pkg-dir = "thaw"

assets-dir = "public"

site-addr = "0.0.0.0:8000"

reload-port = 8001

browserquery = "defaults"
watch = false
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
