[workspace]
resolver = "2"
members = ["app", "frontend", "server", "markdown"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6" }

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
simple_logger = "4.2.0"
thiserror = "1"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
wasm-bindgen = "=0.2.93"

chrono = "0.4"
icondata = "0.4"
palette = "0.7"

quote = "1.0.35"
comrak = "0.21.0"
proc-macro2 = "1.0.78"
syn = "2.0.48"
syntect = "5"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
[[workspace.metadata.leptos]]
name = "leptos-workspace"

bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"

site-addr = "0.0.0.0:8000"
reload-port = 8001

browserquery = "defaults"

watch = false
eny = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
