[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
thaw.workspace = true

http.workspace = true
thiserror.workspace = true

icondata = { version = "0.5.0", default-features = false, features = [
  "ant-design-icons",
  "box-icons",
  "lucide",
] }
palette = "0.7.6"
chrono = "0.4.38"
cfg-if = "1.0.0"
# leptos-use = "0.10.10"
send_wrapper = "0.6"
uuid = { version = "1.10.0", features = ["v4", "js"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
js-sys = "0.3.70"


[features]
default = []
hydrate = ["leptos/hydrate", "thaw/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "thaw/ssr",
]
